ispravljeno za mobitel

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <br><br><br>
         <div class="col-md-1"><br><br></div>
         <div class="col-md-5">
-            <img src="./images/slika1.jpg" alt="slika" style="width:400px; height: 250px;" class="img-responsive">
+            <img src="./images/slika1.jpg" alt="slika" style="width:90%; height: 80%;" class="img-responsive">
         </div>
     </div>
 </div>
