--- a/index.html
+++ b/index.html
@@ -20,12 +20,10 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="_navbar.scss">
 <script src="index.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
 
 
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-md bg-light navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#pocetak"><img src="./images/icon1.png" alt="Logo" style="width:40px;"></a>
   
@@ -48,6 +46,7 @@
         </li> 
       </ul>
     </div> 
+</nav>
   <a name="pocetak"/>
 
 <div class="container-fluid justify-content-center align-self-center">
