ispravljeno za mobitel

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-<nav class="navbar navbar-expand-md bg-light navbar-dark fixed-top">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#pocetak"><img src="./images/icon1.png" alt="Logo" style="width:40px;"></a>
   
