--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+<nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#pocetak"><img src="./images/icon1.png" alt="Logo" style="width:40px;"></a>
   
@@ -71,7 +71,10 @@
         <div class="col-md-5">
             <img src="./images/slika1.jpg" alt="slika" style="width:90%; height: 80%;" class="img-responsive">
         </div>
+   
+        
     </div>
+    <br> <br>
 </div>
 <br>
 <div id="work">
@@ -105,7 +108,7 @@
     <div class="row">
         <div class="col-md-6">
             <form action="/action_page.php" class="was-validated">
-                <div class="form-group">
+                <div class="form-group width: 80%">
                     <label for="name">Name:</label>
                     <input type="text" class="form-control" id="name" placeholder="Enter name" name="name" required>
                     <div class="valid-feedback">Valid.</div>
